Moved hobby folder to correct folder

--- a/itis3135/hobby/index.html
+++ b/itis3135/hobby/index.html
@@ -11,12 +11,12 @@
     <header>
         <h1>Urban Sketching Adventures</h1>
         <nav>
-            <a data-section="what">What</a> <span class="divider">|</span>
-            <a data-section="who">Who</a> <span class="divider">|</span>
-            <a data-section="when">When</a> <span class="divider">|</span>
-            <a data-section="where">Where</a> <span class="divider">|</span>
-            <a data-section="how">How</a> <span class="divider">|</span>
-            <a data-section="why">Why</a> <span class="divider">|</span>
+            <a data-section="what">What</a> <span class="divider">&#x270E;</span>
+            <a data-section="who">Who</a> <span class="divider">&#x270E;</span>
+            <a data-section="when">When</a> <span class="divider">&#x270E;</span>
+            <a data-section="where">Where</a> <span class="divider">&#x270E;</span>
+            <a data-section="how">How</a> <span class="divider">&#x270E;</span>
+            <a data-section="why">Why</a> <span class="divider">&#x270E;</span>
             <a data-section="ai">AI Prompts</a>
         </nav>
     </header>
