Footer and CSS touch-ups

--- a/itis3135/hobby/index.html
+++ b/itis3135/hobby/index.html
@@ -228,10 +228,8 @@
     </main>
 
     <footer>
-        <p><a href>Designed by Proud Cobra Enterprises</a></p>
-        <p>
-            <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
-        </p>
+        <p>Designed by <a href="../proud-cobra.com" target="_blank">Proud Cobra Enterprises</a></p>
+        <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
     </footer>
 
     <script src="scripts/hidden.js"></script>
