Added AI sketch; more CSS touch-up

--- a/itis3135/hobby/index.html
+++ b/itis3135/hobby/index.html
@@ -223,6 +223,11 @@
                 <li>"Generate an urban sketch drawn with a pencil."</li>
                 <li>(From here, just said, "Another one", until I had the quota.)</li>
             </ul>
+            <figure>
+                <img src="images/ai_figure.jpg" alt="A pencil sketch of an AI figure.">
+                <figcaption>A pencil sketch of an AI figure.</figcaption>
+                <p class="prompt"><i>Prompt: A pencil sketch of a figure of AI.</i></p>
+            </figure>
         </section>
 
     </main>
