HTML errors in Hobby

--- a/itis3135/hobby/index.html
+++ b/itis3135/hobby/index.html
@@ -24,9 +24,7 @@
         <section id="what">
             <h2>What is Urban Sketching?</h2>
             <p>Urban sketching is the practice of drawing on location, capturing the essence of the places and moments that surround you. It's about documenting life as it happens, directly from observation, rather than working from photos or imagination in a studio.</p>
-
             <p>Here's a breakdown of what that means:</p>
-
             <ul>
                 <li><strong>On Location:</strong>
                     <p>Urban sketchers draw wherever they are: city streets, parks, cafes, public events, their own homes, or while traveling. The key is to be present and capture the scene directly.</p>
@@ -44,35 +42,29 @@
                     <p>While it can be a solitary pursuit, urban sketching also fosters a strong sense of community. Sketchers often meet up to draw together, share their work online, and participate in sketch crawls.</p>
                 </li>
             </ul>
-
             <p>In essence, urban sketching is a way to connect with your environment, express your creativity, and create a visual record of your experiences. It's about seeing the beauty in the ordinary and capturing the fleeting moments of everyday life.</p>
-
             <figure>
                 <img src="images/sketch1.jpg" alt="A busy street scene captured in a sketch.">
                 <figcaption>A sketch of a vibrant market square.</figcaption>
-                <p class="prompt"><i>Prompt: Sketch an urban scene</i></p>
             </figure>
+            <p class="prompt"><i>Prompt: A detailed sketch of a busy European market square, with people and stalls, in a watercolor style.</i></p>
         </section>
 
         <section id="who" class="hidden">
             <h2>Who are Urban Sketchers?</h2>
             <p>Urban sketchers are a diverse and passionate group of individuals who share a love for drawing on location. They come from all walks of life, including professional artists, architects, designers, students, and hobbyists. What unites them is the desire to capture the world around them through sketching.</p>
-
             <p>You'll find urban sketchers sketching solo in quiet corners, or in bustling groups at organized 'sketch crawls.' They might be capturing the intricate details of a historic building, the lively atmosphere of a market, or a simple, everyday moment in a park.</p>
-
             <p>The urban sketching community is incredibly welcoming and inclusive. There are local groups and online communities where sketchers share their work, offer tips and encouragement, and organize events. Whether you're a seasoned artist or a complete beginner, you'll find a place within the urban sketching community.</p>
-
             <figure>
                 <img src="images/sketch2.jpg" alt="A group of people sketching in a park.">
-                <figcaption>Urban people going about their day.</figcaption>
-                <p class="prompt"><i>Prompt: Another one.</i></p>
+                <figcaption>A group of sketchers capturing a park scene.</figcaption>
             </figure>
+            <p class="prompt"><i>Prompt: A group of diverse people sitting and sketching in a sunny park, using various art supplies, in a hand-drawn style.</i></p>
         </section>
 
         <section id="when" class="hidden">
             <h2>When to Sketch?</h2>
             <p>Urban sketching isn't bound by strict schedules or specific times. The beauty of it lies in its flexibility – you can sketch whenever and wherever inspiration strikes.</p>
-
             <ul>
                 <li><strong>Any Time of Day:</strong>
                     <p>Early mornings offer soft light and quiet streets, perfect for capturing architectural details. Midday brings vibrant colors and bustling activity, ideal for sketching lively scenes. Evenings and nights offer unique lighting challenges and atmospheric shadows.</p>
@@ -87,20 +79,17 @@
                     <p>Join local sketch crawls, meetups, and workshops to sketch with fellow enthusiasts. Participate in online challenges and events to stay motivated and inspired.</p>
                 </li>
             </ul>
-
             <p>The best time to sketch is whenever you have the urge to capture a moment. Keep a sketchbook and your favorite tools handy, and you'll always be ready to sketch.</p>
-
             <figure>
                 <img src="images/sketch3.jpg" alt="A sketch of a sunset over a city skyline.">
-                <figcaption>bustling urban life.</figcaption>
-                <p class="prompt"><i>Prompt: Excellent.  And Another.</i></p>
+                <figcaption>A sunset sketch over the cityscape.</figcaption>
             </figure>
+            <p class="prompt"><i>Prompt: A vibrant sunset over a city skyline, captured in a quick sketch using warm colors, in an impressionistic style.</i></p>
         </section>
 
         <section id="where" class="hidden">
             <h2>Where to Sketch?</h2>
             <p>The world is your studio when it comes to urban sketching! Inspiration can be found in the most unexpected places.</p>
-
             <ul>
                 <li><strong>City Streets:</strong>
                     <p>Capture the hustle and bustle of busy intersections, the charm of quiet alleyways, or the grandeur of iconic landmarks.</p>
@@ -124,20 +113,17 @@
                     <p>Don't limit yourself! Any location that sparks your interest is a potential sketching spot.</p>
                 </li>
             </ul>
-
             <p>The key is to be observant and find the beauty in your surroundings, no matter where you are.</p>
-
             <figure>
                 <img src="images/sketch4.jpg" alt="A sketch of a cozy cafe interior.">
-                <figcaption>A busy intersection.</figcaption>
-                <p class="prompt"><i>Prompt: Another.</i></p>
+                <figcaption>A cozy cafe interior sketch.</figcaption>
             </figure>
+            <p class="prompt"><i>Prompt: An interior sketch of a cozy cafe with warm lighting, filled with people, in a detailed pen and ink style.</i></p>
         </section>
 
         <section id="how" class="hidden">
             <h2>How to Start Urban Sketching?</h2>
             <p>Getting started with urban sketching is easier than you might think! Here's a breakdown of the 'how-to':</p>
-
             <ul>
                 <li><strong>Gather Basic Supplies:</strong>
                     <p>A sketchbook (any size or type that you prefer). A pen or pencil (a waterproof pen is ideal for adding watercolor later). Optional: watercolors, markers, colored pencils, or any other medium you enjoy.</p>
@@ -167,8 +153,8 @@
             <figure>
                 <img src="images/sketch5.jpg" alt="A sketch of various art supplies laid out on a table.">
                 <figcaption>Street corner.</figcaption>
-                <p class="prompt"><i>Prompt: One more.</i></p>
             </figure>
+            <p class="prompt"><i>Prompt: One more.</i></p>
         </section>
 
         <section id="why" class="hidden">
@@ -207,8 +193,8 @@
             <figure>
                 <img src="images/sketch6.jpg" alt="A sketch of a person drawing in a sketchbook outdoors.">
                 <figcaption>A person sketching outdoors.</figcaption>
-                <p class="prompt"><i>Prompt: I need another sketch.</i></p>
             </figure>
+            <p class="prompt"><i>Prompt: I need another sketch.</i></p>
         </section>
 
         <section id="ai" class="hidden">
@@ -226,8 +212,8 @@
             <figure>
                 <img src="images/ai_figure.jpg" alt="A pencil sketch of an AI figure.">
                 <figcaption>A pencil sketch of an AI figure.</figcaption>
-                <p class="prompt"><i>Prompt: A pencil sketch of a figure of AI.</i></p>
             </figure>
+            <p class="prompt"><i>Prompt: A pencil sketch of a figure of AI.</i></p>
         </section>
 
     </main>
