Changed ProudCobra case

--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -13,7 +13,7 @@
         <h2>Introduction</h2>
         <p>This is my Proud Cobra website.</p>
         <figure>
-            <img src="images/ProudCobra.png" alt="Proud Cobra">
+            <img src="images/proud_cobra.png" alt="Proud Cobra">
             <figcaption>Proud Cobra Logo</figcaption>
         </figure>
         <ul>
