Adjusted links in footer of home page

--- a/index.html
+++ b/index.html
@@ -124,9 +124,9 @@ li > a {
                     <li>||</li>
                     <li><a href = "https://puzzle5.github.io/" target="_blank">GitHub.io</a></li>
                     <li>||</li>
-                    <li><a href = "itis3135/">Click to go to ITIS3135 Site</a></li>
+                    <li><a href = "itis3135/" target="_blank">Click to go to ITIS3135 Site</a></li>
                     <li>||</li>
-                    <li><a href = "about:blank" target="_blank">[No LinkedIn]</a></li>
+                    <li><a href="about:blank" target="_blank">[No LinkedIn]</a></li>
                 </ul>
             </nav>
             <script>
