--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         header {
             text-align: center;
             padding: 20px 0;
+            background-color: #333; /* Added header background */
         }
 
         main {
@@ -109,8 +110,6 @@
             <h1>I'm Proud Cobra...</h1>
             <h2>...and this is the root of my website.</h2>
             <p>Below, you can navigate to my class projects.</p>
-
-
         </div>
     </main>
 
@@ -124,7 +123,7 @@
                 <li><a href="about:blank" target="_blank">[No LinkedIn]</a></li>
             </ul>
         </nav>
-        <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
     </footer>
+    <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
 </body>
 </html>
