Main home page improvements

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         header {
             text-align: center;
             padding: 20px 0;
-            background-color: #333; /* Added header background */
+            background-color: #333;
         }
 
         main {
@@ -95,8 +95,16 @@
 
         footer {
             text-align: center;
-            padding: 20px 0;
+            padding: 5px 0; /* Further reduced padding */
             background-color: #333;
+        }
+
+        footer nav ul {
+            margin: 5px 0; /* Reduced margin */
+        }
+
+        footer nav a {
+            font-size: 0.9em; /* Reduced font size */
         }
     </style>
 </head>
@@ -107,8 +115,7 @@
 
     <main>
         <div id="container">
-            <h1>I'm Proud Cobra...</h1>
-            <h2>...and this is the root of my website.</h2>
+            <h2>This is the root of my website.</h2>
             <p>Below, you can navigate to my class projects.</p>
         </div>
     </main>
@@ -123,7 +130,7 @@
                 <li><a href="about:blank" target="_blank">[No LinkedIn]</a></li>
             </ul>
         </nav>
+        <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
     </footer>
-    <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
 </body>
 </html>
