Main home page improvements

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         header {
             text-align: center;
-            padding: 20px 0;
+            padding: 10px 0;
             background-color: #333;
         }
 
@@ -45,7 +45,6 @@
 
         h2 {
             color: #b5cea8;
-            text-align: center;
             margin-bottom: 20px;
         }
 
@@ -95,16 +94,16 @@
 
         footer {
             text-align: center;
-            padding: 5px 0; /* Further reduced padding */
+            padding: 5px 0;
             background-color: #333;
         }
 
         footer nav ul {
-            margin: 5px 0; /* Reduced margin */
+            margin: 5px 0;
         }
 
         footer nav a {
-            font-size: 0.9em; /* Reduced font size */
+            font-size: 0.9em;
         }
     </style>
 </head>
