--- a/whimsical/about.html
+++ b/whimsical/about.html
@@ -27,7 +27,7 @@
         <div>Instead of blasting, they prefer to "serenade" the minerals, using harmonious frequencies to loosen the gemstones and ores from their rocky slumber. Their process involves a bit of geological gardening, carefully tending to the mineral veins like prize-winning petunias. Each extracted crystal is polished with moonbeams and whispered affirmations, ensuring it carries only the purest, most cheerful vibrations. Their company mascot? A fluffy mole named "Bartholomew," who has an uncanny knack for sniffing out the most sparkly finds. Earthbloom Minerals doesn't just mine; they perform a delicate dance with the earth, leaving behind not scars, but blooming crystal gardens and the gentle hum of happy geology.</div>
     </main>
 
-    <div class="profile-container">
+    <section class="profile-container">
         <div class="profile-image">
             <img src="images/sy3zk8sy3zk8sy3z.jpg" alt="Bartholomew Profile">
         </div>
@@ -39,7 +39,7 @@
                 "Every sparkle tells a story." - Bartholomew
             </blockquote>
         </div>
-    </div>
+    </section>
     <div class="gap-div"></div>
     <footer class="footer">
         <nav>
