--- a/whimsical/about.html
+++ b/whimsical/about.html
@@ -45,16 +45,9 @@
         <nav>
             <div class="footer-bottom-links">
                 <span>Proud Cobra Minerals, inc. &copy;ff 2025</span>
-                <span>
-                <a href="https://validator.w3.org/check?uri=referer" id="validation_link_html">
-                    <img style="border:0;width:88px;height:31px" src="https://mytienhoang.github.io/itis3135/z_archives/html_validation.png" alt="Valid HTML!">
-                </a>
-                <script>
-                    document.getElementById("validation_link_html").setAttribute("href","https://validator.w3.org/check?uri=" + location.href);
-                    document.getElementById("validation_link_css").setAttribute("href","https://jigsaw.w3.org/css-validator/validator?uri=" + location.href);
-                </script>
             </div>
         </nav>
     </footer>
+    <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
 </body>
 </html>
