--- a/itis3135/proud-cobra.com/index.html
+++ b/itis3135/proud-cobra.com/index.html
@@ -37,5 +37,6 @@
         <p>&copy; 2024 Proud Cobra Enterprises</p>
         <p>Strikingly Effective Digital Solutions.</p>
     </footer>
+    <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
 </body>
 </html>
